<resources>
    <string name="app_name">infocovid-proyecto</string>
    <string name="infocovid_19">InfoCovid_19</string>
    <string name="logo_infocovid">logo_infocovid</string>
    <string name="title_activity_login_activity">login_activity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="reg_strate">Regístrate</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="ingresar">Ingresar</string>
    <string name="inicio_de_sesion">Inicio de Sesión</string>
    <string name="bienvenido_de_vuelta">Bienvenido de vuelta</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mapa">Mapa</string>
    <string name="triaje">Triaje</string>
    <string name="citas">Citas</string>
    <string name="noticias">Noticias</string>
    <string name="prevencion">Prevención</string>
    <string name="ajustes">Ajustes</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="cifras">Cifras</string>

    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">Log Out</string>
    <string name="revoke">Revoke</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>

    <string name="facebook_application_id">2244047389072001</string>
    <string name="facebook_app_id">2244047389072001</string>
    <string name="fb_login_protocol_scheme">fb2244047389072001</string>

    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="password">Password</string>
    <string name="describa_su_metabolismo">Describa su metabolismo</string>
    <string name="registrar">Registrar</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="muestras_procesadas">Total de muestras</string>
    <string name="casos_confirmados">Casos confirmados</string>
    <string name="casos_nuevos">Casos nuevos</string>
    <string name="personas_recuperadas">Personas recuperadas</string>
    <string name="personas_recuperadas_hoy">Personas recuperadas hoy</string>
    <string name="personas_fallecidas_hoy">Personas fallecidas hoy</string>
    <string name="personas_fallecidas">Personas fallecidas</string>
    <string name="llamar_al_106_o_al_117_si_tienes_alguno_de_estos_sintomas">Llamar al 106 o al 117 si tienes alguno de estos Sintomas:</string>
    <string name="sesaci_n_de_falta_de_aire_o_dificultad_para_respirar_en_reposo">Sesación de falta de aire o dificultad para respirar en reposo</string>
    <string name="antes_de_empezar_verifica_que_no_sea_una_emergencia">Antes de empezar, verifica que no sea una emergencia</string>
    <string name="desorientaci_n_o_confusi_n">Desorientación o confusión</string>
    <string name="fiebre_mayor_a_38_persistente_por_m_s_de_2_d_as">Fiebre mayor a 38° persistente por más de 2 días</string>
    <string name="dolor_de_pecho">Dolor de pecho</string>
    <string name="ingresa_tu_documento_de_identidad_para_iniciar_la_autoevaluaci_n">Ingresa tu documento de Identidad para iniciar la autoevaluación</string>
    <string name="todos_los_datos_correctos">Todos los datos correctos.</string>
    <string name="tipo_de_documentaci_n">N° del Documento de Identidad</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="datos_triaje">Pedimos tus datos personales para realizar seguimiento en caso sea necesario. Solo tiens que completar la primera vez que realices la evaluación.</string>
    <string name="datos_personales">Datos Personales</string>
    <string name="ingrese_tus_datos_personales">Ingrese tus datos Personales</string>
    <string name="sexo">Sexo</string>
    <string name="datos_de_contacto">Datos de Contacto</string>
    <string name="celular_o_tel_fono">Celular o Teléfono</string>
    <string name="nombres_y_apellidos">Nombres y apellidos</string>
    <string name="si_ingresas_informaci_n_falsa_ser_s_sancionado">Si ingresas información falsa serás sancionado</string>
    <string name="nombre_y_apellido_de_familiar">Nombre y apellido de familiar</string>
    <string name="datos_de_contactos_familiares">Datos de Contactos Familiares</string>
    <string name="direc_muestra">Ingresa la dirección donde resides actualmente para facilitar las coordinaciones de tu toma de muestra en caso sea necesaria.</string>
    <string name="regi_n">Región</string>
    <string name="provincia">Provincia</string>
    <string name="distrito">Distrito</string>
    <string name="direcci_n">Dirección</string>
    <string name="ingrese_tu_direcci_n">Ingrese tu Dirección</string>
    <string name="guardar_ubicaci_n">Guardar ubicación</string>
    <string name="presione_para_seleccionar_su_imagen">Presione para seleccionar su imagen</string>
    <string name="mensajeTriaje">Gracias por completar el registro, gracias a eso, tendremos conocimiento sobre su caso y podremos hacerle el seguimiento respectivo</string>
    <string name="triajeTitle">Triaje finalizado</string>
    <string name="fallecidos">Fallecidos</string>
    <string name="confirmados">Confirmados</string>
    <string name="ciudad">Ciudad</string>
    <string name="letalidad">Letalidad</string>
    <string name="pcr">PCR(+)</string>
    <string name="pr">PR(+)</string>
    <string name="inicio">Inicio</string>
    <string name="hola">Hola, </string>
    <string name="observe_infectados">Observe Infectados</string>
    <string name="select">*Seleccionar más de 2 síntomas para continuar</string>
    <string name="continuar">Continuar</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="confirmar">Confirmar</string>
    <string name="s_ntomas">Síntomas</string>
    <string name="marca_tus_s_ntomas_si_no_tienes_ninguno_marca_la_opcion_no_tengo_ning_n_s_ntoma">Marca tus síntomas. Si no tienes ninguno, no marques alguna opción</string>
    <string name="ingrese_pa_s">Ingrese país</string>
    <string name="regresar">Regresar</string>
    <string name="actualizar">Actualizar</string>
    <string name="ingrese_distrito">Ingrese distrito</string>
    <string name="cargando">Cargando países</string>
    <string name="cargando_cifras">Cargando cifras...</string>
    <string name="enter_city">Ingrese una ciudad</string>
    <string name="casos_negativos">Casos negativos</string>
    <string name="olvid_su_contrase_a">¿Olvidó su contraseña?</string>
    <string name="bye">Esperamos regreses pronto</string>
    <string name="idioma">Seleccione idioma</string>
    <string name="noticias_m_s_relevantes">Principales Titulares</string>
    <string name="bienvenido_mapas">Bienvenido a Mapas-Infocovid</string>
    <string name="select_map">Puedes seleccionar ver cifras en el mundo o alertas registradas por los usuarios</string>

    <string-array name="ciudades">
        <item>AMAZONAS</item>
        <item>ANCASH</item>
        <item>APURIMAC</item>
        <item>AREQUIPA</item>
        <item>AYACUCHO</item>
        <item>CAJAMARCA</item>
        <item>CALLAO</item>
        <item>CUSCO</item>
        <item>HUANCAVELICA</item>
        <item>HUANUCO</item>
        <item>ICA</item>
        <item>JUNIN</item>
        <item>LA LIBERTAD</item>
        <item>LAMBAYEQUE</item>
        <item>LIMA</item>
        <item>LORETO</item>
        <item>MADRE DE DIOS</item>
        <item>MOQUEGUA</item>
        <item>PASCO</item>
        <item>PIURA</item>
        <item>PUNO</item>
        <item>SAN MARTIN</item>
        <item>TACNA</item>
        <item>TUMBES</item>
        <item>UCAYALI</item>
    </string-array>

    <string-array name="distritos">
        <item>ALTO DE LA ALIANZA</item>
        <item>CALANA</item>
        <item>CIUDAD NUEVA</item>
        <item>CORONEL GREGORIO ALBARACCIN LANCHIPA</item>
        <item>INCLAN</item>
        <item>LA YARADA DE LOS PALOS</item>
        <item>PACHIA</item>
        <item>PALCA</item>
        <item>POCOLLAY</item>
        <item>SAMA</item>
        <item>TACNA</item>
    </string-array>

    <string-array name="opciones">
        <item>Español</item>
        <item>Inglés</item>
    </string-array>
</resources>