<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.infocovid_proyecto.login_activity"
    >


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-130dp"
        android:src="@drawable/login" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/logo_infocovid"
        android:src="@drawable/covid" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:layout_marginRight="60dp"
        android:fontFamily="@font/text_me_one"
        android:text="@string/infocovid_19"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/purple_200"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_below="@id/imageView3"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="186dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:fontFamily="@font/text_me_one"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/txtinput"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_below="@id/imageView3"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="258dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:fontFamily="@font/text_me_one"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"

        android:textColorHint="@color/txtinput"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:fontFamily="@font/text_me_one"
        android:text="@string/no_tienes_una_cuenta"
        android:textColor="@color/txtinput"
        android:textSize="15dp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:textFontWeight="@android:integer/status_bar_notification_info_maxnum"/>

    <TextView
        android:id="@+id/txtRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="15dp"
        android:text="@string/reg_strate"
        android:textColor="@color/purple_500"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtPassword"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shape2"
        android:text="@string/ingresar"
        android:textColor="@color/purple_200" />

    <TextView
        android:id="@+id/txtRRecuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:text="@string/olvid_su_contrase_a"
        android:textColor="@color/txtinput"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="-80dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:textColor="@color/title"
        android:textStyle="bold"
        android:textSize="23dp"
        android:text="@string/inicio_de_sesion" />
    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:textColor="@color/txtinput"
        android:textSize="15dp"
        android:text="@string/bienvenido_de_vuelta" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/loginFacebook"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:background="@null"
        android:onClick="buttonClickLoginFB"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-57dp"
        android:layout_marginRight="82dp"
        android:src="@drawable/facebook" />

    <ImageButton
        android:id="@+id/ivGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-57dp"
        android:layout_marginRight="41dp"
        android:background="@null"
        android:src="@drawable/google" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>



</RelativeLayout>
