<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.triaje.TriajeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:background="@drawable/register">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="290dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/logo_infocovid"
                android:src="@drawable/covid" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:fontFamily="@font/text_me_one"
                android:text="@string/noticias"
                android:textColor="@color/purple_200"
                android:textSize="55dp"
                android:textStyle="bold" />
        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25dp"
            android:text="@string/noticias_m_s_relevantes"/>

        <Spinner
            android:id="@+id/spOpciones"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/idioma"
            android:layout_height="wrap_content"/>

        <androidx.viewpager.widget.ViewPager
            android:foregroundGravity="center"
            android:id="@+id/viewNoticias"
            android:layout_centerInParent="true"
            android:overScrollMode="never"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    </LinearLayout>
</RelativeLayout>


